--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.5.99
+	alogin: login() eat one line at a time
+
 	a10login: remove the aflex-specific stuff.  This is the wrong way to
 	do this and it doesn't work properly anyway.
 
