--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,7 @@
 3.5.99
+	*login: change handling of ssh key-related prompts to one line at a time
+	to eliminate timing-related problem.
+
 	alogin: login() eat one line at a time
 
 	a10login: remove the aflex-specific stuff.  This is the wrong way to
