--- a/rancid/man/router.db.5
+++ b/rancid/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "17 June 2016"
+.TH "router.db" "5" "6 December 2016"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -208,8 +208,8 @@ A SMC switch, which also account for some Dell OEMs.
 Including Dell PowerConnect 35xx (3524, 3524P, 3548, 3548P) and 7048.
 .TP
 .ID 15n
-.B ciscowlc
-A Cisco WLC.
+.B timos
+An Alcatel-lucent router, such as the 7750 SR.
 .TP
 .ID 15n
 .B xirrus
