add timeos stuff to manpages

--- a/man/clogin.1
+++ b/man/clogin.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "clogin" "1" "26 May 2016"
+.TH "clogin" "1" "6 December 2016"
 .SH NAME
 clogin \- Cisco login script
 .SH SYNOPSIS
@@ -57,6 +57,7 @@ or Redback router.
 There are complementary scripts for
 A10,
 Alteon,
+Alcatel-lucent,
 Avocent (Cyclades),
 Bay Networks (nortel),
 ADC-kentrox EZ-T3 mux,
@@ -76,6 +77,7 @@ and Xirrus arrays,
 named
 .B a10login
 .B alogin,
+.B allogin,
 .B avologin,
 .B blogin,
 .B elogin,
