--- a/man/rancid.1
+++ b/man/rancid.1
@@ -79,11 +79,11 @@ F5 BigIPs
 Fortinet Firewalls
 .TP
 .B rancid
-The generic rancid script; supporting Allied Telesis AW+ devices, Arbor
-Networks Appliances, Ciena Waverserver, Cisco IOS, Cisco IOS-XR, Cisco
-NX-OS, Cisco WLC, (some) Dell switches, Extreme switches, Foundry (aka
-some Brocade) devices, Compass EOS, Juniper JUNOS, and UBNT Edgemax and
-EdgeRouter.
+The generic rancid script; supporting Allied Telesis AW+ devices,
+Alcatel-lucent TimOS, Arbor Networks Appliances, Ciena Waverserver,
+Cisco IOS, Cisco IOS-XR, Cisco NX-OS, Cisco WLC, (some) Dell switches,
+Extreme switches, Foundry (aka some Brocade) devices, Juniper JUNOS, and
+UBNT Edgemax and EdgeRouter.
 It uses the device O/S modules for parsing routines as determined by the
 .BR rancid.types.conf (5)
 file(s).
