--- a/man/clogin.1
+++ b/man/clogin.1
@@ -60,6 +60,7 @@ Alteon,
 Alcatel-lucent,
 Avocent (Cyclades),
 Bay Networks (nortel),
+Cisco Small Business devices,
 ADC-kentrox EZ-T3 mux,
 Foundry,
 HP Procurve switches and Cisco AGMs,
@@ -80,6 +81,7 @@ named
 .B allogin,
 .B avologin,
 .B blogin,
+.B csblogin,
 .B elogin,
 .B flogin,
 .B fnlogin,
