--- a/man/router.db.5
+++ b/man/router.db.5
@@ -86,7 +86,11 @@ A Ciena Waveserver.
 .ID 15n
 .B cisco
 A Cisco router, PIX, or switch such as the 3500XL or 6000 running IOS (or
-IOS-like) OS, but not IOS-XR.
+IOS-like) OS, but not IOS-XR, NX-OS or Cisco small business devices.
+.TP
+.ID 15n
+.B cisco-sb
+A Cisco small business devices.
 .TP
 .ID 15n
 .B cisco-nx
