--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,9 @@
 
 	allogin, timos.pm: TimOS support
 
+3.6.1
+	par.c: fix misplaced pointer deref
+
 3.6
 	rancid.pm: ipaddrval() if IPv6 prefix length is missing, simply set 128.
 
