--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -10,6 +10,8 @@
 	allogin, timos.pm: TimOS support
 
 3.6.1
+	ios.pm: filter license registration timestamp
+
 	fnrancid: filter oscillating md5-keys
 
 	par.c: fix misplaced pointer deref
