--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 3.6.1
 	ios.pm: filter license registration timestamp
  
+	fnrancid: filter oscillating md5-keys
+
 	par.c: fix misplaced pointer deref
 
 3.6
