--- a/man/rancid.1
+++ b/man/rancid.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "rancid" "1" "24 May 2016"
+.TH "rancid" "1" "27 December 2016"
 .SH NAME
 rancid \- Cisco configuration filter
 .SH SYNOPSIS
@@ -80,7 +80,7 @@ Fortinet Firewalls
 .TP
 .B rancid
 The generic rancid script; supporting Allied Telesis AW+ devices,
-Alcatel-lucent TimOS, Arbor Networks Appliances, Ciena Waverserver,
+Alcatel-lucent SROS, Arbor Networks Appliances, Ciena Waverserver,
 Cisco IOS, Cisco IOS-XR, Cisco NX-OS, Cisco WLC, (some) Dell switches,
 Extreme switches, Foundry (aka some Brocade) devices, Juniper JUNOS, and
 UBNT Edgemax and EdgeRouter.
