--- a/man/router.db.5
+++ b/man/router.db.5
@@ -212,7 +212,7 @@ A SMC switch, which also account for some Dell OEMs.
 Including Dell PowerConnect 35xx (3524, 3524P, 3548, 3548P) and 7048.
 .TP
 .ID 15n
-.B timos
+.B sros
 An Alcatel-lucent router, such as the 7750 SR.
 .TP
 .ID 15n
