more nokia/lucent/alcatel branding clean-up, at the request of nokia

--- a/man/clogin.1
+++ b/man/clogin.1
@@ -57,7 +57,7 @@ or Redback router.
 There are complementary scripts for
 A10,
 Alteon,
-Alcatel-lucent,
+Nokia,
 Avocent (Cyclades),
 Bay Networks (nortel),
 Cisco Small Business devices,
