--- a/man/rancid.1
+++ b/man/rancid.1
@@ -80,9 +80,9 @@ Fortinet Firewalls
 .TP
 .B rancid
 The generic rancid script; supporting Allied Telesis AW+ devices,
-Alcatel-lucent SROS, Arbor Networks Appliances, Ciena Waverserver,
-Cisco IOS, Cisco IOS-XR, Cisco NX-OS, Cisco WLC, (some) Dell switches,
-Extreme switches, Foundry (aka some Brocade) devices, Juniper JUNOS, and
+Arbor Networks Appliances, Ciena Waverserver, Cisco IOS, Cisco IOS-XR,
+Cisco NX-OS, Cisco WLC, (some) Dell switches, Extreme switches,
+Foundry (aka some Brocade) devices, Juniper JUNOS, Nokia SROS, and
 UBNT Edgemax and EdgeRouter.
 It uses the device O/S modules for parsing routines as determined by the
 .BR rancid.types.conf (5)
