--- a/rancid/man/csblogin.1
+++ b/rancid/man/csblogin.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "clogin" "1" "6 December 2016"
+.TH "clogin" "1" "28 December 2016"
 .SH NAME
 clogin \- Cisco login script
 .SH SYNOPSIS
@@ -57,7 +57,6 @@ or Redback router.
 There are complementary scripts for
 A10,
 Alteon,
-Alcatel-lucent,
 Avocent (Cyclades),
 Bay Networks (nortel),
 ADC-kentrox EZ-T3 mux,
@@ -69,6 +68,7 @@ MRV optical switch,
 Mikrotik routers,
 Netscreen firewalls,
 Netscaler,
+Nokia,
 Riverstone,
 Netopia,
 Cisco WLCs,
@@ -77,7 +77,6 @@ and Xirrus arrays,
 named
 .B a10login
 .B alogin,
-.B allogin,
 .B avologin,
 .B blogin,
 .B elogin,
@@ -90,6 +89,7 @@ named
 .B mtlogin,
 .B nlogin,
 .B nslogin,
+.B noklogin,
 .B rivlogin,
 .B tlogin,
 .B wlogin,
