--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	cloginrc.5: make note of special-character escaping precise - Lee
+
 	timeos -> sros & allogin -> noklogin, at the request of nokia
 
 	nxos.pm: pull snmp trap host filtering from ios.pm - Brandon Ewing
