--- a/rancid/man/router.db.5
+++ b/rancid/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "6 December 2016"
+.TH "router.db" "5" "10 January 2017"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -213,7 +213,7 @@ Including Dell PowerConnect 35xx (3524, 3524P, 3548, 3548P) and 7048.
 .TP
 .ID 15n
 .B sros
-An Nokia router, such as the 7750 SR.
+A Nokia (Alcatel-Lucent) router, such as the 7750 SR.
 .TP
 .ID 15n
 .B xirrus
