--- a/rancid/man/clogin.1
+++ b/rancid/man/clogin.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "clogin" "1" "6 December 2016"
+.TH "clogin" "1" "10 January 2017"
 .SH NAME
 clogin \- Cisco login script
 .SH SYNOPSIS
@@ -57,7 +57,7 @@ or Redback router.
 There are complementary scripts for
 A10,
 Alteon,
-Nokia,
+Nokia (Alcatel-Lucent),
 Avocent (Cyclades),
 Bay Networks (nortel),
 Cisco Small Business devices,
