--- a/rancid/man/rancid.1
+++ b/rancid/man/rancid.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "rancid" "1" "27 December 2016"
+.TH "rancid" "1" "10 January 2017"
 .SH NAME
 rancid \- Cisco configuration filter
 .SH SYNOPSIS
@@ -82,8 +82,8 @@ Fortinet Firewalls
 The generic rancid script; supporting Allied Telesis AW+ devices,
 Arbor Networks Appliances, Ciena Waverserver, Cisco IOS, Cisco IOS-XR,
 Cisco NX-OS, Cisco WLC, (some) Dell switches, Extreme switches,
-Foundry (aka some Brocade) devices, Juniper JUNOS, Nokia SROS, and
-UBNT Edgemax and EdgeRouter.
+Foundry (aka some Brocade) devices, Juniper JUNOS, Nokia (Alcatel-Lucent)
+SROS, and UBNT Edgemax and EdgeRouter.
 It uses the device O/S modules for parsing routines as determined by the
 .BR rancid.types.conf (5)
 file(s).
