--- a/man/clogin.1
+++ b/man/clogin.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "clogin" "1" "10 January 2017"
+.TH "clogin" "1" "22 February 2017"
 .SH NAME
 clogin \- Cisco login script
 .SH SYNOPSIS
@@ -78,7 +78,6 @@ and Xirrus arrays,
 named
 .B a10login
 .B alogin,
-.B allogin,
 .B avologin,
 .B blogin,
 .B csblogin,
@@ -91,6 +90,7 @@ named
 .B mrvlogin,
 .B mtlogin,
 .B nlogin,
+.B noklogin,
 .B nslogin,
 .B rivlogin,
 .B tlogin,
