ios.pm: summarize bytes free on flash
- !Flash: 15998976 bytes total (3868160 bytes free)
+ !Flash: 15998976 bytes total (3 MB free)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	ios.pm: summarize bytes free on flash
+
 	noklogin: SROS has no concept of enable mode; remove such code so that
 	autoenable/etc are not needed
 
