edgerouter.pm: add match for transient show version command failure eg: - #Version:      v1.8.0 - #Build ID:     4853089 - #Build on:     02/19/16 16:07 - #HW model:     EdgeRouter Lite 3-Port - #HW S/N:       DC9FDB283096 + #Plat exception: connect: Connection refused

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	edgerouter.pm: add match for transient show version command failure
+
 	ios.pm: summarize bytes free on flash
 
 	noklogin: SROS has no concept of enable mode; remove such code so that
