junos.pm: add VMX-SCALE & VMX-BANDWIDTH to license filter - Brad Dreisbach
- #   VMX-BANDWIDTH                         2          100           0    permanent
+ #   VMX-BANDWIDTH                         0          100           0    permanent
  #   VMX-SCALE                             3            3           0    permanent

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.99.99
+	junos.pm: add VMX-SCALE & VMX-BANDWIDTH to license filter - Brad
+	Dreisbach
+
 	rancid.spec: fix omissions - Brad Dreisbach
 
 	configure: fix --with-git
