--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -2,7 +2,7 @@
 	junos.pm: add VMX-SCALE & VMX-BANDWIDTH to license filter - Brad
 	Dreisbach
 
-	rancid.spec: fix omissions - Brad Dreisbach
+	rancid.spec: fix omissions & typo - Brad Dreisbach
 
 	configure: fix --with-git
 
