hpuitfilter: add 3 CR replacements, fixing hp5412 J8697A or hp5406 - Kalani Sanders
Replaces "[?7h", "[1L", and "[1M" with CR.
 
According to http://www.inwap.com/pdp10/ansicode.txt
  [1L    Insert blank line at current row (shift screen down)
  [1M    Delete the current line (shift screen up)
  [?7h = DECAWM - AutoWrap Mode, start newline after column 80

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.99.99
+	hpuitfilter: add 3 CR replacements, fixing hp5412 J8697A or hp5406 -
+	Kalani Sanders
+
 	arbor.pm: force a terminal type so as not to confuse the PoS with
 	"network."  Seems that it might also support "dumb".
 
