--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,6 +1,6 @@
 3.99.99
-	hpuitfilter: add 3 CR replacements, fixing hp5412 J8697A or hp5406 -
-	Kalani Sanders
+	hpuitfilter: add 3 CR replacements, fixing hp5412 J8697A or hp5406 and
+	HP/Aruab-2920 switches running WB_16_03_0004 - Kalani Sanders
 
 	arbor.pm: force a terminal type so as not to confuse the PoS with
 	"network."  Seems that it might also support "dumb".
