--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	nxos.pm: drop bootvar_debug.* log files reported on the ML
+
 	hpuitfilter: add 3 CR replacements, fixing hp5412 J8697A or hp5406 and
 	HP/Aruab-2920 switches running WB_16_03_0004 - Kalani Sanders
 
