--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	hlogin: prompt matching not needed for interfactive - Per-Olof Olsson
+
 	nxos.pm: drop bootvar_debug.* log files reported on the ML
 
 	hpuitfilter: add 3 CR replacements, fixing hp5412 J8697A or hp5406 and
