--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
 3.99.99
-	hlogin: prompt matching not needed for interfactive - Per-Olof Olsson
+	hlogin: prompt matching not needed for interactive - Per-Olof Olsson
 
 	nxos.pm: drop bootvar_debug.* log files reported on the ML
 
