--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 3.99.99
-	srcos.pm: power info changes for 7750/7950 - Greg Hankins
+	sros.pm: final formatting tweaks - Greg Hankins
+
+	sros.pm: power info changes for 7750/7950 - Greg Hankins
 
 	control_rancid: check for duplicated device names in the router.db of
 	the active group.  print a warning and drop the dumplicate.
