--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	fnrancid: filter oscillating ospf md5 keys - Merijn Evertse
+
 	sros.pm: final formatting tweaks - Greg Hankins
 
 	sros.pm: power info changes for 7750/7950 - Greg Hankins
