ciscowlc.pm: filter bogus & oscillating mgmt address disaplay - Reuben Farrelly
eg:
interface nat-address management set -1916881008.42143836.0.-200904920

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.99.99
+	ciscowlc.pm: filter bogus & oscillating mgmt address disaplay - Reuben
+	Farrelly
+
 	wlogin: GC some stuff from clogin, disable pager & fix the prompt regex
 
 	anlogin: disable pager on arbor
